Lander homepage align fix

--- a/website.css
+++ b/website.css
@@ -151,6 +151,7 @@ footer{
 	display: inline-flex;
 	width: 100%;
 	height: 650px;
+    text-align: center;
 }
 .text_and_photo_container{
 	position: relative;
